--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "mocha": "^5.2.0",
     "selenium-standalone": "^6.15.3",
+    "wdio-mocha-framework": "^0.6.4",
     "webdriverio": "^4.13.2"
   }
 }
