--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^4.2.0",
     "mocha": "^7.1.0",
     "selenium-standalone": "^6.15.3",
+    "sync-request": "^6.1.0",
     "wdio-mocha-framework": "^0.6.4",
     "wdio-selenium-standalone-service": "0.0.12",
     "webdriverio": "^4.13.2"
